@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.currency_converter">
+
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="currency_converter"
         android:icon="@mipmap/ic_launcher">
